--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <title>Frontend Mentor | Results summary component</title>
   </head>
   <body>
-    <div class="container">
+    <main class="container">
     <div class="score_card">
       <h1 class="lavender fw-700">Your Result</h1>
 
@@ -82,6 +82,6 @@
           <button type="button" class="white button"> Continue </button>
       </div>
       </p>
-    </div>
+    </main>
   </body>
 </html>
